Version 1.5.8+svn:
 * Graphics:
   * Removed the black background from some remaining old portraits
   * New portrait for Dwarf Thunderer, Dwarf Dragonguard.

 * Language and i18n:
   * updated translations: Chinese (Traditional), Hungarian, Slovak

Version 1.5.8:
 * Campaigns:
   * An Orcish Incursion
     * Converted to the new gold carryover system
   * Eastern Invasion
     * Fixed victory not triggering correctly in 'The Crossing'
     * Fixed missing time of day schedules in several scenarios
     * Fixed various problems in 'Northern Outpost'
   * The Hammer of Thursagan
     * Converted to the new gold carryover system.
   * The Rise of Wesnoth
     * Renamed "Lord Dionli" to "Lady Dionli".
   * Son of the Black Eye
     * Made scenarios 'Silent Forest' and 'Shan Taum the Smug' harder.
   * Legend of Wesmere 
     * Fixed the bug with savegames in scenario 3
 * Graphics:
   * New portraits for Royal Guard, Heavy Infantry, Iron Mauler, Sergeant,
     Lieutenant, General, Grand Marshal with 1 alternate, Saurian Augur line,
     Saurian Skirmisher line, Troll Whelp, Death Knight
   * Fixed drawing glitches in the listboxes
   * Fixed several glitches with the new portrait dialog
   * Optimized animation and invalidation of idle/standing units
   * Removed the black background from most of the old portraits
 * Language and i18n:
   * Fixed a small bug that was causing the translations engine to look
     at badly mixed up paths when trying to locate UMC translations,
     rendering them unusable (bug #12872)
   * Fixed translation of 'A New Land' not being shown
   * updated translations: Chinese (Simplified), Czech, Danish, German,
     Hungarian, Italian, Japanese, Lithuanian, Russian, Slovak, Spanish
   * updated DejaVuSans to 2.28
 * Multiplayer ui:
   * Added a gui front-end to various commands, brought up by double clicking
     a player name, replacing the old whisper dialog
   * Automatically select the game the selected player is in