@@ -10,6 +10,10 @@ Version 1.5.8+svn:
     * New portrait for Dwarf Thunderer, Dwarf Dragonguard.
     * Removed the black background from some remaining old portraits.
 
+  * User interface
+    * Disable the "Network Player" option when playing a non-networked MP
+      game.
+
 Version 1.5.8:
   * Campaigns
     * An Orcish Incursion
